[tool.poetry]
name = "phone-book"
version = "0.1.0"
description = ""
authors = ["Yuhen Liubimov <yauhenliubimau@gmail.com>"]
readme = "README.md"
packages = [{include = "phone_book"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.mypy]
cache_dir = ".venv/mypy/"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
exclude = [
    ".venv",
    ".github",
    ".idea",
    ".vscode",
    "venv",
]
files = ["."]
pretty = true
python_version = "3.10"
show_error_context = true
sqlite_cache = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true



[tool.black]
line-length = 79
target-version = ["py310"]
include = '^.+\.pyi?$'
extend-exclude = '''
(
    .*\.local.*
    | .*\.venv.*
    | .*\.idea.*
    | .*\.vscode.*
)
'''

[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"
skip = [
    ".venv",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
